# pet-pastebin

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
Docker/: api.Dockerfile  autodelete.Dockerfile  docker-compose.yml  front.Dockerfile  generator.Dockerfile  server.Dockerfile
config/: .env.example  nginx.conf  sequence.conf
docs/paste/: get.yml  post.yml
pastebin/: Dockerfile  config.py  main.py
pastebin/aws/: __init__.py  download.py
pastebin/classes/: pastebin.py
pastebin/database/: __init__.py  paste.py
pastebin/resources/: __init__.py  new_paste.py  paste.py  pastebin.py
pastebin/routes/: __init__.py  hello_world.py
pastebin/schemas/: __init__.py  paste_in.py  pastebin.py
pastebin/utils/: __init__.py
src/api/: config.py
src/api/aws/: __init__.py  cloud.py  upload.py
src/api/cache/: __init__.py  abc.py  data.py  hash.py
src/api/classes/: __init__.py  main.py  paste.py
src/api/config/: __init__.py  apidocs.py  aws.py  broker.py  hash_cache.py  metadata_cache.py  postgres.py  text_cache.py
src/api/database/: __init__.py  main.py  paste.py  user.py
src/api/resources/: __init__.py  new_paste.py  paste.py
src/api/schemas/: __init__.py  paste_base.py  paste_hash.py  paste_in.py  paste_out.py  timedelta.py
src/api/tasks/: __init__.py  celeryconfig.py  tasks.py
src/api/utils/: __init__.py  expiration.py  unhash_func.py
src/frontend/: components.py  config.py  forms.py  main.py
src/generator/: __init__.py  config.py  main.py  sequence.py  utils.py
tests/: __init__.py  test_app.py
(+13 files in other folders)
